--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
                             <div className="login-wrap">
                                     <div className="form-horizontal">
                                         <div className="form-group">
-                                            <label htmlFor="inputEmail3" className="col-sm-3 control-label">E-mail</label>
+                                            <label htmlFor="inputEmail3" className="col-sm-3 control-label">Login</label>
                                             <div className="col-sm-9">
                                                 <input type="text" className="form-control" id="inputUser"/>
                                             </div>
